kube/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis
    service: redis
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: redis
