kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fbis-ccf
spec:
  selector:
    name: fbis-ccf
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 8080
