kube/networkpolicy-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-network-policy-internal-fbis-ccf
spec:
  podSelector:
    matchLabels:
      name: fbis-ccf
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-internal
      ports:
        - protocol: TCP
          port: 8080
