kube/redis-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-permit-access
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: fbis-ccf
    - podSelector:
        matchLabels:
          name: fbis-ccf
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      name: redis
